WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
208431
Many tests in canvas and fast/canvas are asserting after
r257677
https://bugs.webkit.org/show_bug.cgi?id=208431
Summary
Many tests in canvas and fast/canvas are asserting after r257677
Wenson Hsieh
Reported
2020-03-01 13:42:31 PST
:(
Attachments
Patch
(2.52 KB, patch)
2020-03-01 13:51 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2020-03-01 13:42:57 PST
E.g. stderr: SHOULD NEVER BE REACHED /Volumes/Data/slave/ios-simulator-13-debug/build/Source/WebKit/WebProcess/GPU/graphics/RemoteRenderingBackend.cpp(83) : std::unique_ptr<ImageBuffer> WebKit::RemoteRenderingBackend::createImageBuffer(const WebCore::FloatSize &, WebCore::RenderingMode, float, WebCore::ColorSpace) 1 0x6b35b1889 WTFCrash 2 0x6a00a629b WTFCrashWithInfo(int, char const*, char const*, int) 3 0x6a12a8afc WebKit::RemoteRenderingBackend::createImageBuffer(WebCore::FloatSize const&, WebCore::RenderingMode, float, WebCore::ColorSpace) 4 0x6a143b4a3 WebKit::WebChromeClient::createImageBuffer(WebCore::FloatSize const&, WebCore::RenderingMode, float, WebCore::ColorSpace) const 5 0x6a143b62a WebKit::WebChromeClient::createImageBuffer(WebCore::FloatSize const&, WebCore::ShouldAccelerate, WebCore::ShouldUseDisplayList, WebCore::RenderingPurpose, float, WebCore::ColorSpace) const 6 0x6bbb4d778 WebCore::Chrome::createImageBuffer(WebCore::FloatSize const&, WebCore::ShouldAccelerate, WebCore::ShouldUseDisplayList, WebCore::RenderingPurpose, float, WebCore::ColorSpace) const 7 0x6bbfc7678 WebCore::ImageBuffer::create(WebCore::FloatSize const&, WebCore::ShouldAccelerate, WebCore::ShouldUseDisplayList, WebCore::RenderingPurpose, float, WebCore::ColorSpace, WebCore::HostWindow const*) 8 0x6bb2c5cdb WebCore::HTMLCanvasElement::createImageBuffer() const 9 0x6bb25e6f5 WebCore::CanvasBase::buffer() const 10 0x6bb25e669 WebCore::CanvasBase::drawingContext() const 11 0x6bb4d3ada WebCore::CanvasRenderingContext2DBase::drawingContext() const 12 0x6bb4d99f2 WebCore::CanvasRenderingContext2DBase::setFillStyle(WebCore::CanvasStyle) 13 0x6bb4dc6b7 WebCore::CanvasRenderingContext2DBase::setFillColor(WTF::String const&, WTF::Optional<float>) 14 0x6bb4ff600 WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_9::operator()(WTF::String const&) const 15 0x6bb4ff52d void WTF::__visitor_table<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_9, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_10, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_11>, WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >::__trampoline_func<WTF::String>(WTF::Visitor<WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_9, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_10, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_11>&, WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&) 16 0x6bb4ff470 WTF::__visitor_return_type<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_9, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_10, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_11>, WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >::__type WTF::visit<WTF::Visitor<WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_9, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_10, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_11>, WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >(WTF::Visitor<WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_9, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_10, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_11>&&, WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&) 17 0x6bb4e1df2 decltype(WTF::visit(makeVisitor(std::forward<WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_9>(fp0), std::forward<WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_10>(fp0), std::forward<WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_11>(fp0)), std::forward<WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&>(fp))) WTF::switchOn<WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_9, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_10, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_11>(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_9&&, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_10&&, WebCore::CanvasRenderingContext2DBase::setFillStyle(WTF::Variant<WTF::String, WTF::RefPtr<WebCore::CanvasGradient, WTF::DumbPtrTraits<WebCore::CanvasGradient> >, WTF::RefPtr<WebCore::CanvasPattern, WTF::DumbPtrTraits<WebCore::CanvasPattern> > >&&)::$_11&&)
Wenson Hsieh
Comment 2
2020-03-01 13:44:55 PST
Followup to <
rdar://problem/59911910
>
Wenson Hsieh
Comment 3
2020-03-01 13:51:16 PST
Created
attachment 392103
[details]
Patch
WebKit Commit Bot
Comment 4
2020-03-01 15:13:50 PST
Comment on
attachment 392103
[details]
Patch Clearing flags on attachment: 392103 Committed
r257693
: <
https://trac.webkit.org/changeset/257693
>
WebKit Commit Bot
Comment 5
2020-03-01 15:13:52 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug