Many tests in canvas and fast/canvas are asserting after r257677 https://bugs.webkit.org/show_bug.cgi?id=208431 <rdar://problem/59911910>

Reviewed by Tim Horton.

RemoteRenderingBackend asserts that it should never be created with a RenderingMode that isn't either
RemoteAccelerated or RemoteUnaccelerated. This was previously the case before r257677, because
ImageBuffer::create() would only call into the host window (i.e. the chrome and, in turn, chrome client) to
create the remote image buffer if the rendering mode is RemoteAccelerated or RemoteUnaccelerated. However, since
we want to move away from any references to RemoteAccelerated or RemoteUnaccelerated rendering modes in WebCore,
we should instead fix this by adding a similar check in the client (WebKit) layer.

* WebProcess/WebCoreSupport/WebChromeClient.cpp:
(WebKit::WebChromeClient::createImageBuffer const):

Don't bother creating a RemoteRenderingBackend and telling it to create an image buffer, if the given
RenderingMode isn't one of RemoteAccelerated or RemoteUnaccelerated.


Canonical link: https://commits.webkit.org/221355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257693 268f45cc-cd09-0410-ab3c-d52691b4dbfc